# Cirrus

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  CmakeLists.txt  README.md
Cirrus/: CMakeLists.txt  Cirrus.cpp  Cirrus.h  Cirrus.ui  action.h  actionmanager.h  drawaction.h  main.cpp  paintscene.cpp  paintscene.h  src.qrc
src/: main.cpp
